dark modes fixed

--- a/public/css/communities.css
+++ b/public/css/communities.css
@@ -992,12 +992,9 @@ div .mini-link-desc {
     background-color: var(--dark-mode-border-color);
   }
 
-  .main-reaction-button, .boost-button { 
-    background-color: var(--dark-mode-border-color);
-    color: var(--dark-mode-text-color);
-  }
-  .reaction-button {
-    background-color: var(--dark-mode-border-color);
+  .reaction-button, .main-reaction-button, .boost-button {
+    border-color: var(--dark-mode-border-color);
+    background-color: var(--dark-mode-body-color);
     color: var(--dark-mode-secondary-text-color);
   }
   
@@ -1103,8 +1100,8 @@ div .mini-link-desc {
   }
 
   .job {
-    background-color: var(--dark-mode-main-color);
-    border-color: var(--dark-mode-border-color);
+    background-color: var(--dark-mode-main-color) !important;
+    border-color: var(--dark-mode-border-color) !important;
   }
 
   .job:hover .job-content:hover {
@@ -1132,7 +1129,7 @@ div .mini-link-desc {
     background-color: var(--dark-mode-body-color);
   }
 
-  .post, .job-content {
+  .post {
       background-color: var(--dark-mode-main-color);
 
   }
