--- a/public/css/post.css
+++ b/public/css/post.css
@@ -1059,8 +1059,8 @@ p.preview-description {
 .sort-option.active {
   background-color: var(--dark-mode-border-color); /* Active tab color */
 }
-  .reaction-button { 
-  background-color: var(--dark-mode-border-color);
+  .reaction-button, .add-comment-button { 
+  background-color: var(--dark-mode-body-color);
   border-color: var(--dark-mode-border-color);
   color: var(--dark-mode-background-text-color);
   }
